<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="com.sc.lesa.mediashar.MainActivity.InputModel"/>
        <import type="com.sc.lesa.mediashar.MainActivity.InputDialog"/>
        <variable
            name="model"
            type="InputModel" />
        <variable
            name="callback"
            type="InputDialog" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="24sp"
            android:text="@string/title_input_ipaddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/editText_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={model.ipaddr}" />
        <LinearLayout
            android:gravity="right"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <Button
                android:onClick="@{(view)->callback.onClick()}"
                android:text="@string/but_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:onClick="@{(view)->callback.onCancle()}"
                android:text="@string/but_cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</layout>